--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
             <version>2.10.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.44.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Vault API -->
         <dependency>
             <groupId>com.github.MilkBowl</groupId>
