--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: LocateCities
-version: 1.2.0
+version: 1.3.0
 main: it.samuconfaa.locateCities.LocateCities
 author: SamuConfaa
-description: Plugin per localizzare città del mondo reale in coordinate Minecraft con sistema avanzato di cooldown
+description: Plugin per localizzare città del mondo reale in coordinate Minecraft con sistema VIP avanzato
 api-version: 1.21
 website: https://github.com/samuconfaa/LocateCities
 depend: [Vault]
@@ -17,23 +17,45 @@ commands:
     aliases: [city, locate]
   cittaadmin:
     description: Comandi amministrativi per LocateCities
-    usage: /<command> <reload|clearcache|info|setorigin|setscale|stats|near|bypass|playerhistory|cleandb|dbstats>
+    usage: /<command> <reload|clearcache|info|setorigin|setscale|stats|near|bypass|playerhistory|cleandb|dbstats|vip>
     permission: locatecities.admin
     permission-message: Non hai il permesso per usare questo comando
 
 permissions:
   locatecities.use:
-    description: Permette di usare i comandi /citta
+    description: Permette di usare i comandi /citta per cercare città
     default: true
+
   locatecities.teleport:
-    description: Permette di teletrasportarsi alle città
+    description: Permette di teletrasportarsi alle città (sistema classico)
     default: true
+
+  # NUOVO SISTEMA VIP
+  locatecities.vip.teleport:
+    description: Permesso VIP per teletrasportarsi con cooldown personalizzato
+    default: false
+    children:
+      locatecities.use: true
+
+  # PERMESSI ADMIN
   locatecities.admin:
     description: Permette di usare i comandi amministrativi
     default: op
+    children:
+      locatecities.use: true
+      locatecities.teleport: true
+      locatecities.vip.teleport: true
+
   locatecities.free:
-    description: Bypass di tutti i costi economici e cooldown
+    description: Bypass completo di tutti i costi economici e cooldown
     default: op
+    children:
+      locatecities.use: true
+      locatecities.teleport: true
+      locatecities.vip.teleport: true
+
   locatecities.noratelimit:
-    description: Bypass del rate limiting per secondo
+    description: Bypass del rate limiting per secondi
     default: op
+    children:
+      locatecities.use: true
